--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.9.4",
+    "gh-pages": "^6.3.0",
     "keen-slider": "^6.8.6",
     "motion": "^12.9.4",
     "next": "^15.3.5",
