--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "export": "next export",
     "lint": "next lint",
-    "deploy": "gh-pages -d out"
+    "deploy": "gh-pages -d out -r https://github.com/Kalaus15/triangle-website"
   },
   "dependencies": {
     "framer-motion": "^12.9.4",
