--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "my-website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kalaus15.github.io/website-test",
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
-    "lint": "next lint"
+    "export": "next export",
+    "lint": "next lint",
+    "deploy": "gh-pages -d out -r https://github.com/Kalaus15/triangle-website"
   },
   "dependencies": {
     "framer-motion": "^12.9.4",
@@ -23,6 +26,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
+    "gh-pages": "^6.3.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
